# DotDash

./: LICENSE  PLAN.md  README.md  SPEC.md  appcast.xml  index.html  migrate-to-root.sh  package-lock.json  package.json  setup-build-env.sh  tailwind.config.js  vite.config.ts
.cursor/rules/: sdd-01-process.mdc  sdd-02-spec-template.mdc  sdd-03-acceptance-criteria.mdc
.github/workflows/: build.yml  release.yml
.kiro/specs/accessibility-permission-flow/: design.md  requirements.md  (+1 more)
app-backup/: .env.example  package-lock.json  package.json  tailwind.config.js
app-backup/build-scripts/: verify-build.sh
app-backup/src/: App.css  App.tsx  index.css
app-backup/src-tauri/: Cargo.toml
app-backup/src-tauri/src/: lib.rs  tray.rs
build-scripts/: clean-build.sh  generate-icons.sh  notarize-mac.sh  staple-mac.sh  verify-build.sh  verify-signing.sh
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: TRAY_ICON_DESIGN.md  icon.icns
src-tauri/src/: TRAY_INTEGRATION.md  lib.rs  tray.rs
src/__tests__/: accessibility-permission-flow.integration.test.tsx
src/components/: AppShell.tsx  CommandSuggestions.tsx  ConflictWarning.tsx  ImportConflictDialog.tsx  Logo.tsx  PauseStatusIndicator.tsx  PauseToggleButton.tsx  PermissionStatus.tsx  PermissionWindow.tsx
src/hooks/: usePermissionFlow.ts
src/lib/: dev-mocks.ts  storage.ts
src/state/: pause-toggle-store.tsx  shortcuts-store.tsx  tray-store.tsx
src/types/: expansion-rule.ts
src/views/: DiagnosticsView.tsx  OnboardingView.tsx  SettingsView.tsx  ShortcutsView.tsx
(+41 files in other folders)
