[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = { version = "2", features = ["colored"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
core-foundation = "0.9"
log = "0.4"
enigo = "0.1"
copypasta = "0.10"
once_cell = "1"
rdev = { version = "0.5", optional = true }
core-graphics = "0.24"
chrono = { version = "0.4", features = ["serde"] }

